--- a/FifteenPuzzle/Base.lproj/LaunchScreen.storyboard
+++ b/FifteenPuzzle/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,40 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Al5-zh-b6O">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Title.png" translatesAutoresizingMaskIntoConstraints="NO" id="cEc-pT-9AA">
+                                        <rect key="frame" x="32" y="100" width="311" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="dPL-8D-b11"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="cEc-pT-9AA" firstAttribute="top" secondItem="Al5-zh-b6O" secondAttribute="top" constant="100" id="Ojf-qK-XH5"/>
+                                    <constraint firstItem="cEc-pT-9AA" firstAttribute="leading" secondItem="Al5-zh-b6O" secondAttribute="leading" constant="32" id="fv6-G9-eXZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="cEc-pT-9AA" secondAttribute="trailing" constant="32" id="tOd-Gg-FWJ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Al5-zh-b6O" secondAttribute="bottom" id="CH1-zC-b50"/>
+                            <constraint firstAttribute="trailing" secondItem="Al5-zh-b6O" secondAttribute="trailing" id="Qu2-Ad-yV6"/>
+                            <constraint firstItem="Al5-zh-b6O" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="aY2-el-6Og"/>
+                            <constraint firstItem="Al5-zh-b6O" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="stf-LG-T5k"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Title.png" width="347" height="70"/>
+    </resources>
 </document>
