--- a/FifteenPuzzle/Base.lproj/Main.storyboard
+++ b/FifteenPuzzle/Base.lproj/Main.storyboard
@@ -191,7 +191,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="frG-4F-1ev">
                                         <rect key="frame" x="0.0" y="603" width="375" height="44"/>
@@ -199,11 +199,18 @@
                                             <constraint firstAttribute="height" constant="44" id="RLk-nd-G5Y"/>
                                         </constraints>
                                         <items>
-                                            <barButtonItem title="Shuffle" id="bIJ-oS-FQB"/>
+                                            <barButtonItem title="Shuffle" id="bIJ-oS-FQB">
+                                                <color key="tintColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <action selector="shuffleTiles:" destination="BYZ-38-t0r" id="C6T-eH-aPj"/>
+                                                </connections>
+                                            </barButtonItem>
                                             <barButtonItem style="plain" systemItem="flexibleSpace" id="eVD-os-Lg3">
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             </barButtonItem>
-                                            <barButtonItem title="Photo" id="xh7-eC-knC"/>
+                                            <barButtonItem title="Photo" id="xh7-eC-knC">
+                                                <color key="tintColor" red="0.0" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            </barButtonItem>
                                         </items>
                                     </toolbar>
                                 </subviews>
